--- a/outfit/css/reveal.js.css
+++ b/outfit/css/reveal.js.css
@@ -46,15 +46,20 @@
     margin: 1.5em auto 0 auto;
     height: 5em;
     width: 80%;
-    box-shadow: 0 0 1.5em .1em;
+    box-shadow: 0 0 0.5em .1em;
 }
-.reveal section p+img.norm{
+.reveal section img.norm{
     position: relative;
     display: block;
     margin: 1.5em auto 0 auto;
     height: auto;
     width: auto;
-    box-shadow: 0 0 1.5em .1em;
+    box-shadow: 0 0 .5em .1em;
+}
+.reveal section img.the_end{
+  border-radius: 50%;
+  box-shadow: 0 0 5em 5em rgb(0, 43, 54);
+  /*width: 100vmax;*/
 }
 .reveal section>dl.fa>dt{
   font-weight: normal;
@@ -209,6 +214,9 @@ div.results_h{
 }
 .reveal pre{
   font-size: .4em;
+}
+.reveal code{
+  /*background: rgba(0, 0, 0, 0.2);*/
 }
 /*********************************************
  * OTHER
