--- a/outfit/css/main.css
+++ b/outfit/css/main.css
@@ -2,14 +2,22 @@ body, p{
     margin: 0; padding: 0;
 }
 header{
-    /*display: inline-block;*/
+    display: inline-block;
     width: 100%;
     height: 20vh;
-    line-height: 1.5em;
+    font-size: 7vmin;
+    margin-bottom: 1vmin;
+    /*line-height: 9vmin;*/
     text-align: center;
-    font-size: 3em;
+    vertical-align: middle;
     color: #999;
+    /*background: orange;*/
     /*border-bottom: 1px solid #71BA8E;*/
+}
+header>p{
+   /* display: inline-block;
+    vertical-align: bottom;*/
+    /*line-height: 3em;*/
 }
 footer{
     position: absolute;
