--- a/outfit/css/lessons/code_preview.css
+++ b/outfit/css/lessons/code_preview.css
@@ -1,12 +1,12 @@
-/*reset {*/
-            *{
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-/*reset }*/
 /*TODO: @import do not work on Apache2 !!!*/
-/*@import "/ProgressBG/outfit/css/custom_hljs.css" screen, projection;*/
+@import "/ProgressBG/outfit/css/custom_hljs.css" screen, projection;
+/*reset {*/
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+/*reset }*/
 /*layout {*/
     .page>section{
         display: inline-block;
@@ -27,24 +27,24 @@
     /*responsive {*/
 /*layout }*/
 /*page style {*/
-            .page>section{
-                padding: 1em;
-            }
-            .page>section.left{
-                border-right: 3px dotted #999;
-            }
-            .page>section>h2{
-                line-height: 2em;
-                text-align: center;
-                border-bottom: 2px solid #666;
-                color: #999;
-            }
-            pre{
-                margin-top: 1em;
-            }
-            iframe.stretch{
-                width: 100%;
-                min-height: 100vh;
-                border: none;
-            }
+    .page>section{
+        padding: 1em;
+    }
+    .page>section.left{
+        border-right: 3px dotted #999;
+    }
+    .page>section>h2{
+        line-height: 2em;
+        text-align: center;
+        border-bottom: 2px solid #666;
+        color: #999;
+    }
+    pre{
+        margin-top: 1em;
+    }
+    iframe.stretch{
+        width: 100%;
+        min-height: 100vh;
+        border: none;
+    }
 /*page style }*/
