--- a/pages/themes/beginners/CSS_Selectors_1/examples/class_selectors.css
+++ b/pages/themes/beginners/CSS_Selectors_1/examples/class_selectors.css
@@ -1,8 +1,16 @@
-p{
-    margin: 0;
-    padding: 0;
-}
+/* Селектира всички HTML елементи, които са дефинирали class="c1" */
 .c1{
-    color: #8E078E;
-    margin: .5em 0 .5em 2rem;
+    color: purple;
+}
+/* Селектира всички HTML елементи, от тип 'h1', които са дефинирали class="c1" */
+h1.c1{
+    font-style: italic;
+}
+/* Селектор по id */
+#vip{
+    color: #aa3333;
+    font-size: 2em;
+    text-shadow:
+        2px 2px #a000a0,
+        2px 2px #c000c0;
 }
