--- a/outfit/css/custom_hljs.css
+++ b/outfit/css/custom_hljs.css
@@ -4,8 +4,8 @@ code[rel]::before{
     display: block;
     width: 100%;
     margin-top: -0.5em;
-    margin-left: -6px;
-    padding-left: 12px;
+    /* margin-left: -6px; */
+    /* padding-left: 12px; */
     padding-top: .3em;
     padding-bottom: .3em;
     overflow: auto;
@@ -35,4 +35,6 @@ pre>code>div{
 pre>code>div.tab3{ margin-left: -7em; }
 pre>code>div.tab4{ margin-left: -9.5em; }
 pre>code>div.tab5{ margin-left: -12em; }
+/* TODO: when in reveal.js: */
+
 /* for highlight.js and my beautify_code_blocks }*/
