--- a/outfit/css/reset.css
+++ b/outfit/css/reset.css
@@ -1,5 +1,5 @@
  /*~~~~~~~~~~ minimal reset  ~~~~~~~~~~*/
-html, body, article,h1, h2, h3, h4, h5, h6, p{
+html, body, article, section, aside, h1, h2, h3, h4, h5, h6, p, ul, ol, li{
     margin: 0; padding: 0;
     font-size: inherit;
 }
