--- a/outfit/css/lessons/code_preview.css
+++ b/outfit/css/lessons/code_preview.css
@@ -36,14 +36,15 @@
         line-height: 2em;
         text-align: center;
         border-bottom: 2px solid #666;
+        margin-bottom: 1em;
         color: #999;
     }
     pre{
-        margin-top: 1em;
+        margin-bottom: 1em;
     }
     iframe.stretch{
         width: 100%;
-        min-height: 90vh;
+        min-height: 88vh;
         border: none;
     }
 /*page style }*/
