--- a/outfit/css/revel.js/common_classes.css
+++ b/outfit/css/revel.js/common_classes.css
@@ -1,36 +1,73 @@
-.left{
+.reveal section .left{
   display: inline-block;
   float: left;
 }
-.right{
+.reveal section .right{
   display: inline-block;
   float: right;
   padding: 1em 0 !important;
   line-height:2.5em !important;
   text-align: left;
 }
-.half{
+.reveal section .half{
   width: 50%;
 }
-.small_font{
+.reveal section .small_font{
   font-size: 12px !important;
 }
-.fontsize1{
+.reveal section .fontsize1{
   font-size: 1em !important;
   line-height: 1em !important;
 }
-.reveal section img{
-  border: 0;
-}
-.reveal .inline{
+.reveal section .inline{
   display: inline-block;
   width: auto;
   box-shadow: none;
 }
-
-.text_left{
+.reveal section .text_left{
   text-align: left;
 }
-.text_center{
+.reveal section .text_center{
   text-align: center !important;
 }
+
+/* text styles { */
+.reveal section .i{
+  font-style: italic;
+}
+.reveal section .b{
+  font-weight: bold;
+}
+.reveal section .nb{
+  font-style: italic;
+}
+/* text styles } */
+/* text colors { */
+  .reveal section .red{
+    color: red;
+  }
+  .reveal section .blue{
+    color: blue;
+  }
+  .reveal section .green{
+    color: green;
+  }
+  .reveal section .darkred{
+    color: darkred;
+  }
+  .reveal section .darkblue{
+    color: darkblue;
+  }
+  .reveal section .darkgreen{
+    color: darkgreen;
+  }
+  .reveal section .lightred{
+    color: lightred;
+  }
+  .reveal section .lightblue{
+    color: lightblue;
+  }
+  .reveal section .lightgreen{
+    color: lightgreen;
+  }
+/* text colors } */
